# chainofexperts

./: .gitignore  README.MD  cmd.md  main.py  pyproject.toml  report.MD  requirements.txt  train.sh  train_olmoe.sh
coe/trainer/: base_trainer.py  fsdp_sft_trainer.py
coe/utils/dataset/: base_dataset.py
coe/utils/debug/: __init__.py  performance.py
config/: SeMoE.yaml  base-v7-e2-t1-h4-b8.yaml  base-v7-e2-t1-h8-b8.yaml  base-v7-e2-t2-h4-b8.yaml  base.yaml  comoe.yaml.old  l1t1.yaml  l1t2.yaml  l1t8.yaml  l2t1.yaml  l2t4.yaml  l3t1.yaml  l4t1.yaml  l4t2.yaml  l5t1.yaml  l6t1.yaml  l8t1.yaml  math.yaml  sft_trainer.yaml  train.yaml  vanilla.yaml
config/coe-tiny-hf-v2/: config.json  modeling_comoe.py
config/comoe-tiny-hf/: config.json  configuration_comoe.py  modeling_comoe.py
config/future/r1-lite-hf/: config.json
config/models/coe-tiny-hf-v2/: config.json
config/models/coe_deepseekv2/: config.json  configuration_coe.py  modeling_coe.py  tokenizer_config.json
config/models/dsv2/: config.json  (+1 more)
config/r1-tiny-hf/: README.md  config.json
data/gsm8k/: test.parquet  train.parquet
examples/: v2-config.json  v2-lite-config.json
old/: main.py
runs/: run.sh
scripts/: download_config.py  download_dataset.py  setup.sh
scripts/plot/: data.tsv  data3.tsv  data4.tsv  data5.tsv  data6.tsv  plot.py  plot_abl.py  plot_dense.py  plot_eff.py  plot_lyr.py  plot_scal.py
server_bash/: g0.sh  g1.sh  g2.sh  g3.sh
server_bash/dsv2_coe/: g.sh  g0.sh  g1.sh  g3.sh
server_bash/olmoe_coe/: g0.sh  g2.sh
server_bash/olmoe_coe_v2/: g.sh  g0.sh  g2.sh
(+40 files in other folders)
