[tool.poetry]
name = "chainofexperts"
version = "0.1.0"
description = "Chain of Experts project"
readme = "README.MD"
packages = [{include = "coe"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.38.0"
flash-attn = "^2.5.0"
datasets = "^2.16.0"
accelerate = "^0.27.0"
numpy = "^1.24.0"
wandb = "^0.16.0"
hydra-core = "^1.3.2"
torch = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 